# SparkleOld

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  SparkleConfig.cmake.in  annotated.html  canvasConfigurationFile.json  classStateMachine-members.html  classStateMachine.html  classStateMachine__coll__graph.md5  classStateMachine__inherit__graph.map  classes.html  classspk_1_1APIModule-members.html  classspk_1_1APIModule.html  classspk_1_1AbstractApplication-members.html  classspk_1_1AbstractApplication.html  classspk_1_1AbstractApplication__coll__graph.map  classspk_1_1AbstractApplication__coll__graph.md5  classspk_1_1AbstractApplication__inherit__graph.map  classspk_1_1AbstractApplication__inherit__graph.md5  classspk_1_1AbstractFrame-members.html  classspk_1_1AbstractFrame.html  classspk_1_1AbstractFrame__coll__graph.map  classspk_1_1AbstractFrame__coll__graph.md5  classspk_1_1AbstractFrame__inherit__graph.map  classspk_1_1AbstractFrame__inherit__graph.md5  classspk_1_1AbstractImage-members.html  classspk_1_1AbstractImage.html  classspk_1_1AbstractImage__coll__graph.map  classspk_1_1AbstractImage__coll__graph.md5  classspk_1_1AbstractImage__inherit__graph.map  classspk_1_1AbstractImage__inherit__graph.md5  classspk_1_1AbstractMetrics-members.html  classspk_1_1AbstractMetrics.html  classspk_1_1AbstractMetrics__inherit__graph.map  classspk_1_1AbstractMetrics__inherit__graph.md5  classspk_1_1AbstractPipeline-members.html  classspk_1_1AbstractPipeline.html  classspk_1_1AbstractPipeline_1_1Object-members.html  classspk_1_1AbstractPipeline_1_1Object.html  (+1295 more)
Sparkle/: CMakeLists.txt
Sparkle/includes/: CMakeLists.txt  sparkle.hpp  spk_basic_functions.hpp
Sparkle/includes/application/: spk_application.hpp
Sparkle/includes/application/modules/: spk_API_module.hpp  spk_graphical_api_module.hpp  spk_keyboard_module.hpp  spk_mouse_module.hpp  spk_profiler_module.hpp  spk_system_module.hpp  spk_time_module.hpp  spk_widget_module.hpp
Sparkle/includes/data_structure/: spk_data_buffer.hpp  spk_field_map.hpp  spk_pool.hpp  spk_safe_pointer.hpp
Sparkle/includes/design_pattern/: spk_activable_object.hpp  spk_callback_container.hpp  spk_command_parser.hpp  spk_context_manager.hpp  spk_contract_provider.hpp  spk_memento.hpp  spk_observable_value.hpp  spk_observer.hpp  spk_singleton.hpp  spk_state_machine.hpp  spk_stated_object.hpp  spk_tree_node.hpp  spk_value.hpp
Sparkle/includes/engine/: spk_game_object.hpp
Sparkle/includes/engine/component/: spk_camera_component.hpp  spk_component.hpp  spk_first_person_controller_component.hpp  (+2 more)
Sparkle/includes/graphics/: spk_frame.hpp  spk_surface.hpp  spk_texture.hpp  spk_window.hpp
Sparkle/includes/input/: spk_input_status.hpp  spk_key_input.hpp  spk_keyboard.hpp  spk_mouse.hpp  spk_mouse_input.hpp  spk_mouse_motion_input.hpp
Sparkle/includes/iostream/: spk_iostream.hpp
Sparkle/includes/math/: spk_perlin.hpp  spk_vector3.hpp
Sparkle/includes/network/: spk_network_acceptor.hpp  spk_network_client.hpp  spk_network_node.hpp  spk_network_server.hpp
Sparkle/includes/profiler/: spk_counter_metrics.hpp  spk_imetrics.hpp  spk_profiler.hpp  spk_time_consumption_metrics.hpp
Sparkle/includes/system/: spk_chronometer.hpp  spk_time_metrics.hpp
Sparkle/includes/threading/: spk_persistent_worker.hpp  spk_promise.hpp  spk_thread.hpp  spk_thread_safe_queue.hpp  spk_worker.hpp
Sparkle/includes/widget/: spk_widget.hpp  spk_widget_activity_scheduler_manager.hpp  spk_widget_atlas.hpp  spk_widget_canvas.hpp  spk_widget_central_node_manager.hpp  spk_widget_client_manager.hpp  spk_widget_components.hpp  spk_widget_game_engine_manager.hpp  spk_widget_interface.hpp  spk_widget_remote_node_manager.hpp  spk_widget_server_manager.hpp
Sparkle/src/: CMakeLists.txt
Sparkle/src/application/: CMakeLists.txt  spk_application.cpp  spk_application_renderer_thread.cpp  spk_application_updater_thread.cpp
Sparkle/src/basic_functions/: CMakeLists.txt
Sparkle/src/data_structure/: spk_data_buffer.cpp  spk_field_map.cpp
Sparkle/src/debug/: CMakeLists.txt  spk_profiler.cpp
Sparkle/src/design_pattern/: spk_activable_object.cpp  spk_activity.cpp  spk_activity_scheduler.cpp  spk_callback_container.cpp  spk_contract_provider.cpp  spk_retry_activity.cpp
Sparkle/src/engine/: CMakeLists.txt  spk_game_object.cpp
Sparkle/src/graphics/: CMakeLists.txt  spk_color.cpp  spk_image.cpp  spk_sprite_sheet.cpp  spk_window.cpp
Sparkle/src/input/: spk_keyboard.cpp  spk_mouse.cpp
Sparkle/src/iostream/: spk_iostream.cpp
Sparkle/src/math/: spk_perlin_1D.cpp  spk_perlin_3D.cpp
Sparkle/src/miscellaneous/: CMakeLists.txt
Sparkle/src/network/: spk_network_client.cpp  spk_network_local_node.cpp  spk_network_message.cpp  spk_network_server.cpp
Sparkle/src/profiler/: spk_counter_metrics.cpp  spk_profiler.cpp  spk_time_consumption_metrics.cpp
Sparkle/src/system/: spk_time_metrics.cpp  spk_timer.cpp
Sparkle/src/threading/: spk_persistent_worker.cpp  spk_thread.cpp  spk_worker.cpp
Sparkle/src/widget/: CMakeLists.txt  spk_widget.cpp  spk_widget_activity_scheduler_manager.cpp  spk_widget_atlas.cpp  spk_widget_canvas.cpp  spk_widget_canvas_calc_formula.cpp  spk_widget_central_node_manager.cpp  spk_widget_client_manager.cpp  spk_widget_game_engine_manager.cpp  spk_widget_input_manager.cpp  spk_widget_interface.cpp  spk_widget_remote_node_manager.cpp  spk_widget_server_manager.cpp
includes/: sparkle.hpp  (+3 more)
playground/: CMakeLists.txt  oldCMakeLists.txt
playground/includes/: pipeline.hpp  playground.hpp
playground/includes/pipeline/: pipeline.hpp  shader_module.hpp  spk_abstract_pipeline.hpp
playground/src/: configuration.cpp  configuration_data.cpp  configuration_field_array_layout.cpp  configuration_output_buffer_layout.cpp  configuration_parse_functions.cpp  configuration_push_constant_layout.cpp  configuration_storage_buffer_layout.cpp  configuration_structure_layout.cpp  configuration_uniform_block_layout.cpp  main.cpp  pipeline.cpp  shader_module.cpp  test.txt
playground/src/pipeline/: pipeline.cpp  shader_module.cpp  spk_abstract_pipeline.cpp  spk_shader_module.cpp
(+1825 files in other folders)
