file(GLOB CURRENT_DIR_CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
list(APPEND SOURCE_FILES ${CURRENT_DIR_CPP_FILES})

add_subdirectory(application)
add_subdirectory(basic_functions)
add_subdirectory(data_structure)
add_subdirectory(design_pattern)
add_subdirectory(engine)
add_subdirectory(graphics)
add_subdirectory(input)
add_subdirectory(iostream)
add_subdirectory(math)
add_subdirectory(miscellaneous)
add_subdirectory(network)
add_subdirectory(system)
add_subdirectory(threading)
add_subdirectory(widget)

set(SOURCE_FILES "${SOURCE_FILES}" PARENT_SCOPE)